[tool.poetry]
name = 'sweetify'
version = '2.3.0'
description = 'SweetAlert integration for Django'
authors = ['Atrox <hello@atrox.dev>']
license = 'BSD-3-Clause'

readme = 'README.md'

homepage = 'https://github.com/Atrox/sweetify-django'
repository = 'https://github.com/Atrox/sweetify-django'

keywords = ['sweetalert', 'django', 'messages']


[tool.poetry.dependencies]
python = '^3.6.2'

[tool.poetry.dev-dependencies]
pytest = '^6.2'
pytest-cov = '^3.0'
django = "^3.2"
black = "^21.11b1"

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
